# documents_rag

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
app/: dependencies.py  main.py
app/routers/: chat.py  vector_storage.py
app/schemas/: chat.py  metadata.py
app/services/: chat.py  chat_service.py  document_analysis.py  image_captioning.py  metadata.py  metadata_storage.py  vector_storage.py
config/: settings.py
docs/: evaluation-plan.md
evaluation/: container.py  dataset.py  ingestion.py  judge.py  main.py  metrics.py  prompts.py  schemas.py  settings.py
src/: agent.py  container.py  prompts.py  schemas.py
src/api/: app.py  dependencies.py  schemas.py
src/api/routes/: chat.py  documents.py
src/application/dto/: batch_upload_dto.py  chat_dto.py  upload_dto.py
src/application/ports/: checkpoint_port.py  llm_port.py  metadata_storage_port.py  vector_store_port.py
src/application/use_cases/: batch_process_documents.py  chat_with_documents.py  process_document.py
src/domain/entities/: classification.py  document.py  metadata.py
src/domain/ports/: agent_port.py  content_extractor_port.py  document_classifier_port.py  llm_port.py  metadata_classifier_port.py  metadata_extractor_port.py  pdf_processor_port.py  text_splitter_port.py  vector_store_port.py
src/domain/prompts/: agent.py  document_processing.py  image_captioner.py  metadata_classifier.py
src/domain/services/: document_classifier.py  text_splitter.py
src/domain/value_objects/: chat_message.py  document_chunk.py  document_classification.py  extraction_result.py  file_info.py  page_content.py  retrieved_document.py
src/infrastructure/adapters/: filesystem_adapter.py  ollama_adapter.py  qdrant_adapter.py  redis_adapter.py
src/infrastructure/agent/: langgraph.py  schemas.py
src/infrastructure/llm/: ollama.py
src/infrastructure/processing/: classification_keywords.py  content_extractor_registry.py  document_classifier.py  image_captioner.py  llm_metadata_classifier.py  markdown_processor.py  metadata_extractor.py  pdf_processor.py  text_processor.py  text_splitter.py
src/infrastructure/rag/: agent.py  prompts.py
src/infrastructure/services/: image_captioning.py  pdf_processor.py
src/infrastructure/storage/: filesystem.py  qdrant.py  redis.py
src/presentation/: api_client.py  streamlit_app.py
src/presentation/components/: batch_file_uploader.py  chat_interface.py  file_uploader.py  sidebar.py
src/presentation/state/: session_state.py
tests/: conftest.py
tests/api/: test_auth.py
tests/application/: test_batch_process_documents.py  test_batch_upload_dto.py  test_chat_with_documents.py  test_process_document.py
tests/domain/: test_document_classification.py  test_value_objects.py
tests/infrastructure/: test_content_extractor_registry.py  test_image_captioner.py  test_langgraph_agent.py  test_llm_metadata_classifier.py  test_markdown_processor.py  test_qdrant_filter.py  test_text_processor.py  test_text_splitter.py
