[project]
name = "documents-rag"
version = "0.2.0"
description = "RAG system with Streamlit UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.7",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-redis>=0.1.1",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "pypdf>=4.2.0",
    "langchain-community>=0.3.29",
    "cryptography>=45.0.7",
    "langmem>=0.0.29",
    "pillow>=10.4.0",
    "pyyaml>=6.0",
    "fastembed>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
