[project]
name = "documents-rag"
version = "0.2.0"
description = "RAG system with Streamlit UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.7",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-redis>=0.1.1",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "pypdf>=4.2.0",
    "langchain-community>=0.3.29",
    "cryptography>=45.0.7",
    "langmem>=0.0.29",
    "pillow>=10.4.0",
    "pyyaml>=6.0",
    "fastembed>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.12.0",
    "pyright>=1.1.400",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "config", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # function calls in defaults (FastAPI Depends)
    "SIM108", # ternary operator (readability)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["src", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
include = ["src", "config"]
exclude = ["**/__pycache__", "tests"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
